Closed
Bug 1826682
Opened 2 years ago
Closed 2 years ago
WebGPU canvases should auto-re-configure when their size changes
Categories
(Core :: Graphics: WebGPU, defect, P1)
Core
Graphics: WebGPU
Tracking
()
RESOLVED
FIXED
114 Branch
| Tracking | Status | |
|---|---|---|
| firefox114 | --- | fixed |
People
(Reporter: jgilbert, Assigned: jgilbert)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
No description provided.
| Assignee | ||
Updated•2 years ago
|
Blocks: webgpu-v1-samples-no-shim
| Assignee | ||
Updated•2 years ago
|
Assignee: nobody → jgilbert
Comment 1•2 years ago
|
||
Updated•2 years ago
|
Blocks: webgpu-official-samples
Comment 2•2 years ago
•
|
||
In case it's helpful: the Austin Eng resizeCanvas example crashes as follows:
- Debug-breaking on
remoteTextureMap.cpp:593: MOZ_ASSERT(owner->mLatestTextureHost->GetSize() == size) - Failing assertion on
remoteTextureMap.cpp:635: MOZ_ASSERT(it->second->mAsyncRemoteTextureHost == owner->mLatestTextureHost)for an access violation, which is not what the assertion is checking for.
| Assignee | ||
Comment 3•2 years ago
|
||
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/92479a027a76
Re-Configure() webgpu canvases on resize. r=webgpu-reviewers,nical,ErichDonGubler
Comment 5•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox114:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•