Bug 1826682 - Re-Configure() webgpu canvases on resize. r=webgpu-reviewers,nical,ErichDonGubler

Differential Revision: https://phabricator.services.mozilla.com/D176884