dom/webgpu/CanvasContext.cpp
@@ -17,13 +17,46 @@
 #include "mozilla/layers/WebRenderCanvasRenderer.h"
 #include "ipc/WebGPUChild.h"
 
+namespace mozilla {
+
+inline void ImplCycleCollectionTraverse(
+    nsCycleCollectionTraversalCallback& aCallback,
+    dom::GPUCanvasConfiguration& aField, const char* aName, uint32_t aFlags) {
+  aField.TraverseForCC(aCallback, aFlags);
+}
+
+inline void ImplCycleCollectionUnlink(dom::GPUCanvasConfiguration& aField) {
+  aField.UnlinkForCC();
+}
+
+// -
+
+template <class T>
+inline void ImplCycleCollectionTraverse(
+    nsCycleCollectionTraversalCallback& aCallback,
+    const std::unique_ptr<T>& aField, const char* aName, uint32_t aFlags) {
+  if (aField) {
+    ImplCycleCollectionTraverse(aCallback, *aField, aName, aFlags);
+  }
+}
+
+template <class T>
+inline void ImplCycleCollectionUnlink(std::unique_ptr<T>& aField) {
+  aField = nullptr;
+}
+
+}  // namespace mozilla
+
+// -
+
 namespace mozilla::webgpu {
 
 NS_IMPL_CYCLE_COLLECTING_ADDREF(CanvasContext)
 NS_IMPL_CYCLE_COLLECTING_RELEASE(CanvasContext)
 
-GPU_IMPL_CYCLE_COLLECTION_WRAPPERCACHE_WEAK_PTR(CanvasContext, mTexture,
-                                                mBridge, mCanvasElement,
+GPU_IMPL_CYCLE_COLLECTION_WRAPPERCACHE_WEAK_PTR(CanvasContext, mConfig,
+                                                mTexture, mBridge,
+                                                mCanvasElement,
                                                 mOffscreenCanvas)
 
 NS_INTERFACE_MAP_BEGIN_CYCLE_COLLECTION(CanvasContext)
@@ -31,6 +64,8 @@ NS_INTERFACE_MAP_BEGIN_CYCLE_COLLECTION(CanvasContext)
   NS_INTERFACE_MAP_ENTRY(nsICanvasRenderingContextInternal)
   NS_INTERFACE_MAP_ENTRY(nsISupports)
 NS_INTERFACE_MAP_END
+
+// -
 
 CanvasContext::CanvasContext() = default;
 
@@ -79,10 +114,10 @@ void CanvasContext::Configure(const dom::GPUCanvasConfiguration& aDesc) {
       return;
   }
 
-  gfx::IntSize actualSize(mWidth, mHeight);
+  mConfig.reset(new dom::GPUCanvasConfiguration(aDesc));
   mRemoteTextureOwnerId = Some(layers::RemoteTextureOwnerId::GetNext());
   mTexture = aDesc.mDevice->InitSwapChain(aDesc, *mRemoteTextureOwnerId,
-                                          mGfxFormat, actualSize);
+                                          mGfxFormat, mCanvasSize);
   if (!mTexture) {
     Unconfigure();
     return;
@@ -100,8 +135,24 @@ void CanvasContext::Unconfigure() {
   }
   mRemoteTextureOwnerId = Nothing();
   mBridge = nullptr;
+  mConfig = nullptr;
   mTexture = nullptr;
   mGfxFormat = gfx::SurfaceFormat::UNKNOWN;
+}
+
+NS_IMETHODIMP CanvasContext::SetDimensions(int32_t aWidth, int32_t aHeight) {
+  aWidth = std::max(1, aWidth);
+  aHeight = std::max(1, aHeight);
+  const auto newSize = gfx::IntSize{aWidth, aHeight};
+  if (newSize == mCanvasSize) return NS_OK;  // No-op no-change resizes.
+
+  mCanvasSize = newSize;
+  if (mConfig) {
+    const auto copy = dom::GPUCanvasConfiguration{
+        *mConfig};  // So we can't null it out on ourselves.
+    Configure(copy);
+  }
+  return NS_OK;
 }
 
 RefPtr<Texture> CanvasContext::GetCurrentTexture(ErrorResult& aRv) {
@@ -161,7 +212,7 @@ bool CanvasContext::InitializeCanvasRenderer(
 
   layers::CanvasRendererData data;
   data.mContext = this;
-  data.mSize = gfx::IntSize{mWidth, mHeight};
+  data.mSize = mCanvasSize;
   data.mIsOpaque = false;
   data.mRemoteTextureOwnerIdOfPushCallback = mRemoteTextureOwnerId;
 
@@ -234,7 +285,7 @@ void CanvasContext::ForceNewFrame() {
     mCanvasElement->InvalidateCanvas();
   } else if (mOffscreenCanvas) {
     dom::OffscreenCanvasDisplayData data;
-    data.mSize = {mWidth, mHeight};
+    data.mSize = mCanvasSize;
     data.mIsOpaque = false;
     data.mOwnerId = mRemoteTextureOwnerId;
     mOffscreenCanvas->UpdateDisplayData(data);
